update exploration notebook

--- a/notebooks/object-retriever.ipynb
+++ b/notebooks/object-retriever.ipynb
@@ -135,6 +135,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir('/home/ubuntu/llm/llm-rag-chatbot')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Yes, several patients have complained about communication issues with hospital staff. Jacob Smith, a patient at Wallace-Hamilton hospital, was disappointed with the lack of communication between different departments, which led to confusion about his treatment plan and discharge instructions. Terri Smith, treated by physician Maria Thompson at Little-Spencer hospital, had a frustrating experience due to unclear communication between the medical staff and herself, causing misunderstandings about her treatment plan. Dennis Fitzgerald, a patient at Shea LLC hospital under physician Erika Ingram, also noted that the hospital staff lacked proper communication among themselves, leading to confusion about his treatment plan. Lastly, Karen Henry, treated by physician Joshua Brewer at Burch-White hospital, appreciated the hospital's cleanliness but experienced unnecessary stress due to a lack of communication about changes in her treatment plan.\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_intro.chatbot import review_chain\n",
+    "\n",
+    "question = \"\"\"Has anyone complained about communication with hospital staff?\"\"\"\n",
+    "\n",
+    "review_chain.invoke(question)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
